// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TheaterCard renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="relative flex-shrink-0 w-[200px] h-[300px] rounded-xl overflow-hidden cursor-pointer group bg-card"
    tabindex="0"
  >
    <div
      class="absolute inset-0 z-0"
    >
      <div
        class="w-full h-full bg-gradient-to-br from-primary/80 to-secondary/80 animate-gradient"
      />
    </div>
    <div
      class="absolute top-3 left-3 z-10 pointer-events-none"
    >
      <span
        class="px-2 py-0.5 rounded-full text-[10px] font-semibold text-white shadow-sm bg-green-500/80"
      >
        已发布
      </span>
    </div>
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent opacity-60 group-hover:opacity-40 transition-opacity duration-300"
    />
    <div
      class="absolute bottom-0 left-0 right-0 p-4 bg-background/80 backdrop-blur-md  transition-all duration-300 group-hover:bg-background/90"
    >
      <h3
        class="font-bold text-lg truncate text-foreground transition-colors duration-300"
      >
        Test Theater
      </h3>
      <div
        class="mt-1 flex items-center gap-2 text-xs text-muted-foreground"
      >
        <div
          data-testid="layers-icon"
        />
        <span>
          5
           节点
        </span>
        <span
          class="ml-auto"
        >
          2年前
        </span>
      </div>
      <div
        class="mt-2 flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-all duration-300 translate-y-2 group-hover:translate-y-0"
      >
        <div
          class="p-1.5 bg-primary rounded-full text-primary-foreground"
        >
          <div
            data-testid="play-icon"
          />
        </div>
        <span
          class="text-xs font-medium text-muted-foreground uppercase tracking-wider"
        >
          打开
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TheaterCard renders delete button when onDelete is provided 1`] = `
<div>
  <div
    class="relative flex-shrink-0 w-[200px] h-[300px] rounded-xl overflow-hidden cursor-pointer group bg-card"
    tabindex="0"
  >
    <div
      class="absolute inset-0 z-0"
    >
      <div
        class="w-full h-full bg-gradient-to-br from-primary/80 to-secondary/80 animate-gradient"
      />
    </div>
    <div
      class="absolute top-3 left-3 z-10 pointer-events-none"
    >
      <span
        class="px-2 py-0.5 rounded-full text-[10px] font-semibold text-white shadow-sm bg-yellow-500/80"
      >
        草稿
      </span>
    </div>
    <div
      class="absolute top-1.5 right-1.5 z-20"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground h-11 w-11 rounded-full bg-black/20 hover:bg-black/40 text-white opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity duration-300 backdrop-blur-sm"
        data-state="closed"
        id="radix-_r_0_"
        type="button"
      >
        <div
          data-testid="more-icon"
        />
        <span
          class="sr-only"
        >
          更多选项
        </span>
      </button>
    </div>
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent opacity-60 group-hover:opacity-40 transition-opacity duration-300"
    />
    <div
      class="absolute bottom-0 left-0 right-0 p-4 bg-background/80 backdrop-blur-md  transition-all duration-300 group-hover:bg-background/90"
    >
      <h3
        class="font-bold text-lg truncate text-foreground transition-colors duration-300"
      >
        Test Theater
      </h3>
      <div
        class="mt-1 flex items-center gap-2 text-xs text-muted-foreground"
      >
        <div
          data-testid="layers-icon"
        />
        <span>
          0
           节点
        </span>
        <span
          class="ml-auto"
        >
          2年前
        </span>
      </div>
      <div
        class="mt-2 flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-all duration-300 translate-y-2 group-hover:translate-y-0"
      >
        <div
          class="p-1.5 bg-primary rounded-full text-primary-foreground"
        >
          <div
            data-testid="play-icon"
          />
        </div>
        <span
          class="text-xs font-medium text-muted-foreground uppercase tracking-wider"
        >
          打开
        </span>
      </div>
    </div>
  </div>
</div>
`;
